--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		</center>
 		<div class="row bg-color-1">
 			<div class="col-6">
-				<img src="pp.jpg" width="100%">
+				<img src="pp.jpg" width="100%" style="padding: 0% 20% 0% 20%;">
 			</div>
 			<div class="col-6 text-colo-white">
 				<span class="heading-2">My Experience</span>
