--- a/site/index.html
+++ b/site/index.html
@@ -80,14 +80,14 @@
 		<center>
 			<span class="heading-1 bg-color-2" id="contact"> CONTACT </span>
 				<div class="bg-color-2">
-					<form action="#" method="POST">
+					<form action="" method="">
 						<input type="text" name="name" placeholder="NAME">
 						<br>
 						<input type="email" name="email" placeholder="EMAIL">
 						<br>
 						<textarea name="message" rows="5" cols="30" placeholder="MESSAGE"></textarea>
 						<br>
-						<button type="submit" class="button btn-black">SUBMIT </button>
+						<button type="submit" class="button btn-black">SUBMIT</button>
 					</form>
 				</div>
 		</center>
