--- a/site/index.html
+++ b/site/index.html
@@ -80,7 +80,7 @@
 		<center>
 			<span class="heading-1 bg-color-2" id="contact"> CONTACT </span>
 				<div class="bg-color-2">
-					<form action="" method="">
+					<form action="" method="POST">
 						<input type="text" name="name" placeholder="NAME">
 						<br>
 						<input type="email" name="email" placeholder="EMAIL">
