--- a/site/index.html
+++ b/site/index.html
@@ -80,14 +80,14 @@
 		<center>
 			<span class="heading-1 bg-color-2" id="contact"> CONTACT </span>
 				<div class="bg-color-2">
-					<form action="" method="POST">
+					<form action="#" method="POST">
 						<input type="text" name="name" placeholder="NAME">
 						<br>
 						<input type="email" name="email" placeholder="EMAIL">
 						<br>
 						<textarea name="message" rows="5" cols="30" placeholder="MESSAGE"></textarea>
 						<br>
-						<button type="submit" class="button btn-black">SUBMIT</button>
+						<button type="button" class="button btn-black" onclick="myButton()">SUBMIT</button>
 					</form>
 				</div>
 		</center>
@@ -99,5 +99,10 @@
 			</div>
 		</div>
 <!--  -->
+<script>
+	function myButton() {
+	  alert("Hello! I am an alert box!");
+	}
+	</script>
 </body>
 </html>
