--- a/site/index.html
+++ b/site/index.html
@@ -101,7 +101,7 @@
 <!--  -->
 <script>
 	function myButton() {
-	  alert("Hello! I am an alert box!");
+	  alert("Message Sent Successfully. :)");
 	}
 	</script>
 </body>
