--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body id="home">
 
 <!--  -->
 		<div class="row text-large">
@@ -101,7 +101,8 @@
 <!--  -->
 <script>
 	function myButton() {
-	  alert("Message Sent Successfully. :)");
+	  alert("Message Sent Successfully 😄");
+	  window.location.href = "#home";
 	}
 	</script>
 </body>
