--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="icon" href="2.png" type="image/gif" sizes="16x16">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body id="home">
@@ -80,14 +81,14 @@
 		<center>
 			<span class="heading-1 bg-color-2" id="contact"> CONTACT </span>
 				<div class="bg-color-2">
-					<form action="#" method="POST" onsubmit="myform()">
+					<form action="#" method="" onsubmit="myform()">
 						<input type="text" name="name" placeholder="NAME" required>
 						<br>
 						<input type="email" name="email" placeholder="EMAIL" required>
 						<br>
 						<textarea name="message" rows="5" cols="30" placeholder="MESSAGE" required></textarea>
 						<br>
-						<button type="submit" class="button btn-black" >SUBMIT</button>
+						<button type="button" class="button btn-black" >SUBMIT</button>
 					</form>
 				</div>
 		</center>
