--- a/site/index.html
+++ b/site/index.html
@@ -88,7 +88,7 @@
 						<br>
 						<textarea name="message" rows="5" cols="30" placeholder="MESSAGE" required></textarea>
 						<br>
-						<button type="button" class="button btn-black" >SUBMIT</button>
+						<button type="submit" class="button btn-black" >SUBMIT</button>
 					</form>
 				</div>
 		</center>
