--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" href="2.png" type="image/gif" sizes="16x16">
+  <link rel="apple-touch-icon" href="/sitefiles/12345/678/90/apple-touch-icon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body id="home">
