--- a/site/index.html
+++ b/site/index.html
@@ -95,7 +95,7 @@
 		</center>
 
 		<div class="row">
-			<div class="col-s-1 center text-large">@2020 Richal Patel</div>
+			<div class="col-s-1 center text-large" style="margin-top: 8px;">@2020 Richal Patel</div>
 			<div class="col-s-2">
 				<a href="#" class="fa fa-facebook"></a> <a href="#" class="fa fa-google"></a>
 			</div>
