--- a/site/index.html
+++ b/site/index.html
@@ -68,8 +68,8 @@
 			</div>
 		</div>
 		<div class="row bg-color-1">
-			<div class="h-col4 bg-color">
-				<span class="heading-3 text-colo-white"> My Skills </span>
+			<div class="h-col4">
+				<span class="heading-1 text-colo-white"> My Skills </span>
 			</div>
 		</div>
 		<div class="row text-large-2 bg-color-1 text-colo-white">
